# meta-state-machine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: front_interface.hpp  state_machine.hpp  type_set.hpp  utils.hpp  variant.hpp
tests/: CMakeLists.txt  test.cpp
